[tool.poetry]
name = "iterate_names"
version = "0.1.0"
description = "Build new sentencies from given one"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
